--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@material-ui/styles": "^4.3.0",
     "apisauce": "^1.0.3",
     "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "16.9.0",
     "react-player": "^1.11.1",
     "react-scripts": "3.0.1"
   },
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^9.0.2",
     "netlify-cli": "^2.12.0"
   }
 }
