--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/react": "^9.0.2",
     "docz": "^1.0.4",
     "docz-theme-default": "^1.0.4",
-    "netlify-cli": "^2.12.0"
+    "netlify-cli": "^2.12.0",
+    "prop-types": "^15.7.2"
   }
 }
